Try fix user card cutoff

--- a/power-system-web-app/src/styles.css
+++ b/power-system-web-app/src/styles.css
@@ -2,6 +2,11 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~leaflet/dist/leaflet.css";
 
+body{
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
 .content-container {
     padding: 10px;
     margin-left: 25%; 
@@ -22,7 +27,7 @@
     z-index: -1;
     height: max-content;
     overflow-x: hidden;
-    overflow-y:hidden;
+    overflow-y:auto;
   }
   
  
@@ -32,6 +37,7 @@
     margin: 0;
     margin-top: 76px;
     margin-left: 200px;
+
   } 
   }
   
